# TelegramBot_ForwardingMessages

./: README.md
send_info_bot/: env.ex  main.py
send_info_bot/core/app/hndl/: msg_h.py  start_h.py
send_info_bot/core/app/mthd/: sender_method.py
send_info_bot/core/domain/entities/: channel.py  msg.py
send_info_bot/core/infra/repositories/msg_repo/: base.py  msg.py
send_info_bot/core/logic/: container.py  mediator.py
send_info_bot/core/logic/command/: base.py  msg.py
send_info_bot/core/logic/exceptions/: base.py  mediator_exc.py
send_info_bot/core/settings/: config.py
send_info_bot/poetry_file/: pyproject.toml
