[tool.poetry]
name = "poetry-file"
version = "0.1.0"
description = ""
authors = ["yultami <yuliacarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.14.0"
punq = "^0.7.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
